# weave-chatbot-reference

./: .gitignore  README.md  app.py  eval_rag.py  pyproject.toml  rag_utils.py
.devcontainer/: devcontainer.json
prompts/: system_prompt_v1.txt
workshop-101/: README.md  app.py  eval_rag.py  evaluation_results.yaml  goldens.jsonl  rag_utils.py
workshop-101/prompts/: system_prompt_v2.txt  system_prompt_v3.txt
workshop-201/: .gitignore  am_i_the_asshole_assistant.py  app_201.py  chunking.py  computer_science_assistant.py  corporate_jargon_assistant.py  dream_interpreter.py  empathy_assistant.py  english_assistant.py  language_assistant.py  llm_evals.ipynb  llm_evals_teachers_assistant.ipynb  math_assistant.py  no_expertise.py  postgres_assistant.py  readme.md  teachers_assistant.py  test_corporate_jargon.py  test_direct_jargon.py  test_multiple_jargon.py  the_greatest_day_ive_ever_known.py
workshop-201/prompts/: system_prompt_v1.txt  system_prompt_v3.txt
workshop-201/rag_chatbot/: README.md  app_201.py  llm_evals.ipynb  vector_store.py
workshop-201/rag_chatbot/.ipynb_checkpoints/: llm_evals-checkpoint.ipynb
workshop-201/rag_chatbot/data/: waml.md
workshop-201/rag_chatbot/prompts/: system_prompt_v1.txt
workshop-201/teachers_assistant/: computer_science_assistant.py  language_assistant.py  llm_evals_teachers_assistant.ipynb  math_assistant.py  pyproject.toml  readme.md  requirements.txt  teachers_assistant.py
