[project]
name = "weave-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=1.15.0",
    "langchain-google-vertexai>=2.1.2",
    "pymilvus[milvus-lite]>=2.6.2",
    "ragas>=0.3.5",
    "scikit-learn>=1.7.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "mypy>=1.18.2",
    "ruff>=0.12.2",
]
