[project]
name = "weave-chatbot"
version = "0.1.0"
description = "MCP and Agent AI Workshops"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=1.15.0",
    "ipywidgets>=8.1.7",
    "langchain==0.3.27",
    "langchain-community==0.3.30",
    "langchain-google-vertexai==2.1.2",
    "litestar>=2.16.0",
    "matplotlib==3.10.6",
    "ollama==0.6.0",
    "pymilvus[milvus-lite]>=2.6.2",
    "ragas==0.3.5",
    "redis>=6.1.0",
    "requests==2.32.5",
    "ragas>=0.3.5",
    "rapidfuzz>=3.14.1",
    "scikit-learn>=1.7.0",
    "seaborn==0.13.2",
    "strands-agents==1.10.0",
    "strands-agents-tools==0.2.9",
    "langchain-ollama>=0.3.10",
    "psycopg2-binary>=2.9.0",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "ipykernel>=6.30.1",
    "ipython>=9.2.0",
    "jupyter>=1.1.1",
    "mypy>=1.18.2",
    "ruff>=0.12.2",
]
